# enum_to_enum

./: Cargo.toml  README.md
.github/workflows/: ci.yml
enum_to_enum/: Cargo.toml
enum_to_enum/src/: lib.rs
enum_to_enum_derive/: Cargo.toml
enum_to_enum_derive/src/: error.rs  ir.rs  lib.rs  merge_in.rs  parser.rs  syn_extensions.rs
enum_to_enum_derive/tests/: example_tests.rs
enum_to_enum_derive/tests/examples/: bad_effect_type_fail.rs  bad_effect_type_fail.stderr  bad_effect_type_name_fail.rs  bad_effect_type_name_fail.stderr  basic_fail.stderr  basic_pass.rs  missing_from_enum_fail.rs  missing_from_enum_fail.stderr
src/: lib.rs
tests/: example_tests.rs
tests/examples/: bad_effect_type_fail.stderr  basic.rs  basic_fail.rs  basic_pass.rs  missing_from_enum_fail.rs  missing_from_enum_fail.stderr
