[package]
name = "enum_to_enum_derive"
version = "0.1.0"
authors = ["Adam Berger <adam@ratchetdesigns.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macro implementation for enum_to_enum. enum_to_enum derives possibly effectful conversions between enums."
include = ["README.md", "LICENSE-APACHE", "LICENSE-MIT", "src/**/*.rs", "README.md"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ratchetdesigns/enum_to_enum"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.74", features = ["full", "extra-traits", "printing", "visit"] }
quote = "^1.0"
proc-macro2 = "^1.0.24"

[dev-dependencies]
trybuild = "^1.0.25"
# removing the enum_to_enum dev dependency until enum_to_enum is released
# enum_to_enum = { version = ">=0.1.0", path = "../enum_to_enum" }
